# dot-io

./: .eslintrc.js  .gitignore  README.md  azure-pipelines-1.yml  azure-pipelines.yml  craco.config.tsx  deployment-test-pipeline.yml  development-pipelines.yml  flake.nix  launchpad.code-workspace  manifest.webmanifest  package-lock.json  package.json  playground.tsx  reload-global-css-after-file-changes.js  snowpack.config.mjs  tailwind.config.js  tsconfig.json  web-test-runner.config.js  webpack.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: azure-staticwebapp.yml  azure-staticwebappsubprod.yml  publish.yml
backend/: package-lock.json  package.json  server.js
backend/models/: user.js  verificationCode.js
backend/routes/: auth.js
ci-cd/: index.js  package-lock.json  package.json
public/: index.html  manager.html  service-worker.ts  serviceWorkerRegistration.ts  serviceWorkerRegistration.tsx
public/js/: webserial.js
src/: App.tsx  index.css  index.tsx  service-worker.js  service-worker.ts  serviceWorkerRegistration.js  serviceWorkerRegistration.ts  serviceWorkerRegistration.tsx  sw.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  serial.rs
src/assets/: global.css  icon template.psd
src/components/: CircleHighlight.tsx  HexbinButton.tsx  closingPrompt.tsx  column.tsx  footer.tsx  hamburgerMenu.tsx  navbar.tsx  promptBeforeClosing.tsx  router.tsx  row.tsx  scoresComponent.tsx
src/data/: chordLibrary.ts  keyPositions.ts  keyPositionsCharachorderLite.tsx
types/: static.d.ts
(+457 files in other folders)
