[package]
name = "dot-io"
version = "0.1.0"
description = "Dot I/O is a free, open source, web based training tool designed to forever change the way we learn to type."
authors = ["Thea Schöbl <dev@theaninova.de>"]
license = "AGPL-3"
repository = "https://github.com/iq-eq-us/dot-io"
default-run = "dot-io"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serialport = "4.2.1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = ["updater", "devtools"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
